[gd_scene load_steps=7 format=2]

[ext_resource path="res://material_maker/nodes/ios/port.gd" type="Script" id=1]
[ext_resource path="res://material_maker/icons/icons.svg" type="Texture" id=2]
[ext_resource path="res://material_maker/widgets/linked_widgets/editable_label.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 2, 17, 12, 14 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 18, 49, 12, 14 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 34, 49, 12, 14 )

[node name="Port" type="HBoxContainer"]
margin_left = 16.0
margin_top = 24.0
margin_right = 130.0
margin_bottom = 44.0
script = ExtResource( 1 )

[node name="Delete" type="Button" parent="."]
margin_right = 24.0
margin_bottom = 20.0
icon = SubResource( 1 )

[node name="Up" type="Button" parent="."]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 20.0
icon = SubResource( 2 )

[node name="Down" type="Button" parent="."]
margin_left = 56.0
margin_right = 80.0
margin_bottom = 20.0
icon = SubResource( 3 )

[node name="Name" parent="." instance=ExtResource( 3 )]
margin_left = 84.0
margin_right = 114.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )

[node name="Type" type="OptionButton" parent="."]
margin_left = 118.0
margin_right = 220.0
margin_bottom = 20.0
rect_min_size = Vector2( 102, 0 )
hint_tooltip = "Input flag"
text = "Greyscale"
selected = 0
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="label_changed" from="Name" to="." method="_on_Name_label_changed"]
[connection signal="item_selected" from="Type" to="." method="_on_Type_item_selected"]
